get-auction-details api
